# AutoPics

./: .gitignore  AutoPics.py  LICENSE  README.md  defaults.txt  imageEditing.py  picComp.py  pyproject.toml
